# weekly-report-mcp

./: .gitignore  README.md  example_usage.py  install_server.sh  pyproject.toml  run_server.sh
mcp_server/: __init__.py  main.py  weekly_report_server.py
