[project]
name = "weekly-report-mcp"
version = "0.1.0"
description = "MCP server for checking weekly reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "gspread",
]

[project.scripts]
weekly-report-server = "mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
